@startuml

title __PREFERENCE's Class Diagram__\n

  namespace jp.oist.abcvlib.camera {
    namespace preference {
      class jp.oist.abcvlib.camera.preference.CameraXLivePreviewPreferenceFragment {
          + CameraXLivePreviewPreferenceFragment()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace preference {
      class jp.oist.abcvlib.camera.preference.LivePreviewPreferenceFragment {
          # isCameraXSetting : boolean
          + onCreate()
          - setUpCameraPreferences()
          - setUpCameraPreviewSizePreference()
          - setUpCameraXTargetAnalysisSizePreference()
          - setUpFaceDetectionPreferences()
          - setUpListPreference()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace preference {
      class jp.oist.abcvlib.camera.preference.PreferenceUtils {
          {static} + getCameraPreviewSizePair()
          {static} + getCameraXTargetAnalysisSize()
          {static} + getCustomObjectDetectorOptionsForLivePreview()
          {static} + getCustomObjectDetectorOptionsForStillImage()
          {static} + getFaceDetectorOptionsForLivePreview()
          {static} + getObjectDetectorOptionsForLivePreview()
          {static} + getObjectDetectorOptionsForStillImage()
          {static} + isCameraLiveViewportEnabled()
          {static} ~ saveString()
          {static} - getCustomObjectDetectorOptions()
          {static} - getModeTypePreferenceValue()
          {static} - getObjectDetectorOptions()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace preference {
      class jp.oist.abcvlib.camera.preference.SettingsActivity {
          {static} + EXTRA_LAUNCH_SOURCE : String
          # onCreate()
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace preference {
      enum LaunchSource {
        CAMERAX_LIVE_PREVIEW
        LIVE_PREVIEW
        STILL_IMAGE
        prefFragmentClass
        titleResId
      }
    }
  }
  

  namespace jp.oist.abcvlib.camera {
    namespace preference {
      class jp.oist.abcvlib.camera.preference.StillImagePreferenceFragment {
          + onCreate()
      }
    }
  }
  

  jp.oist.abcvlib.camera.preference.CameraXLivePreviewPreferenceFragment -up-|> jp.oist.abcvlib.camera.preference.LivePreviewPreferenceFragment
  jp.oist.abcvlib.camera.preference.LivePreviewPreferenceFragment -up-|> android.preference.PreferenceFragment
  jp.oist.abcvlib.camera.preference.SettingsActivity -up-|> androidx.appcompat.app.AppCompatActivity
  jp.oist.abcvlib.camera.preference.SettingsActivity +-down- jp.oist.abcvlib.camera.preference.SettingsActivity.LaunchSource
  jp.oist.abcvlib.camera.preference.StillImagePreferenceFragment -up-|> android.preference.PreferenceFragment


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
